# pharmacy-shop

./: README.md
pharm/: .gitignore  pharmacy.db  pyproject.toml
pharm/pharmacy/: main.py
pharm/pharmacy/database/: core.py
pharm/pharmacy/database/models/: admins.py  inventories.py  users.py
pharm/pharmacy/dependencies/: database.py
pharm/pharmacy/routers/: admins.py  inventories.py  users.py
pharm/pharmacy/schema/: users.py
pharm/pharmacy/tests/: main.py
pharm/tests/: main.py
